k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gstools-frontend
spec:
  selector:
    app: gstools-frontend
  ports:
    - port: 80
      targetPort: 80
      name: gstools-frontend
